--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -14,7 +14,7 @@ name: Update Checker
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt
-  REPO_BRANCH: openwrt-23.05
+  REPO_BRANCH: main
 
 on:
   workflow_dispatch:
